--- a/servefood/Backend/package.json
+++ b/servefood/Backend/package.json
@@ -9,8 +9,10 @@
   "author": "Amit",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^6.10.0",
     "nodemon": "^2.0.22"
   }
